--- a/UnixHarddiskManagement/UnixHarddiskManagement.csproj
+++ b/UnixHarddiskManagement/UnixHarddiskManagement.csproj
@@ -4,7 +4,50 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>0.0.1</Version>
+    <Title>Unix Hard Disk Management</Title>
+    <Authors>Julian Bechtold, Kryptomine.ch</Authors>
+    <Description>this library can be used to effectively manage storage on unix based systems such as ubuntu. Works bot locally and remotely through ssh.</Description>
+    <Copyright>Julian Bechtold</Copyright>
+    <PackageProjectUrl>https://github.com/forReason/UnixHarddiskManagement</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/forReason/UnixHarddiskManagement</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Unix;Linux;Ubuntu;hdd;harddrive;drive;disk;harddisc;administration;remote;management;server;ssh;diskpart;lsblk;shell;lisdis;</PackageTags>
+    <PackageLicenseExpression>MIT-Modern-Variant</PackageLicenseExpression>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageOutputPath>Y:\Projects\Programmbibliotheken\LocalNugetPackages</PackageOutputPath>
+    <PackageIcon>icon.png</PackageIcon>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+    <WarningLevel>7</WarningLevel>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
+    <WarningLevel>7</WarningLevel>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="favicon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FlowEncrypt" Version="1.1.0" />
